--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -1,28 +1,28 @@
-- name: Ievgen Korotkyi
+- name: Короткий Євген
   image: img/team/ievgen_korotkyi.jpg
-  title: Founder
+  title: Засновник. Загальна координація роботи лабораторії
   fb: https://www.facebook.com/korotkiy.eugene
   twitter:
   linkedin: 
 
-- name: Yaroslav Hordienko
+- name: Гордієнко Ярослав
   image: img/team/yaroslav_hordienko.jpg
-  title: Stuff (to be defined later)
-  fb:
+  title: Лаборант. 3D друк, виготовлення PCB, STM32, FPGA
+  fb: https://www.facebook.com/profile.php?id=100013394832750
   twitter:
   linkedin:
 
-- name: Olesya Shut
+- name: Шут Олеся
   image: img/team/olesya_shut.jpg
-  title: Stuff (to be defined later)
-  fb:
+  title: Лаборант. 3D друк, PIC32, FPGA
+  fb: https://www.facebook.com/profile.php?id=100017128725045
   twitter:
   linkedin:
 
 - name: Serhii Fedorenko
   image: img/team/serhii_fedorenko.jpg
-  title: Stuff (to be defined later)
-  fb:
+  title: Лаборант. 3D друк, мікрокомп'ютери, STM32, FPGA
+  fb: https://www.facebook.com/profile.php?id=100006757414298
   twitter: 
   linkedin:
 
