--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -14,7 +14,7 @@
 
 - name: Шут Олеся
   image: img/team/olesya_shut.jpg
-  title: Лаборант. 3D друк, PIC32, FPGA
+  title: Лаборант. 3D друк, Arduino, PIC32, FPGA
   fb: https://www.facebook.com/profile.php?id=100017128725045
   twitter:
   linkedin:
