--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -19,7 +19,7 @@
   twitter:
   linkedin:
 
-- name: Serhii Fedorenko
+- name: Федоренко Сергій
   image: img/team/serhii_fedorenko.jpg
   title: Лаборант. 3D друк, мікрокомп'ютери, STM32, FPGA
   fb: https://www.facebook.com/profile.php?id=100006757414298
