--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ exclude: ['README.md']
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
-title: Open Hardware Laboratory Lampa
+title: Відкрита лабораторія електроніки Лампа
