--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title: Відкрита лабораторія електроніки Лампа
 collections: 
   photos: 
     output: true
-    permalink: /:collection/:name/
+    permalink: /:collection/:name
 
 defaults: 
   - scope: 
