Adding info about Vitaliy Biliy

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -19,10 +19,10 @@
   twitter:
   linkedin:
 
-- name: Федоренко Сергій
-  image: /img/team/serhii_fedorenko.jpg
-  title: Лаборант. 3D друк, мікрокомп'ютери, STM32, FPGA
-  fb: https://www.facebook.com/profile.php?id=100006757414298
+- name: Білий Віталій
+  image: /img/team/vitaliy_biliy.jpg
+  title: Лаборант. 3D друк, аналогова електроніка
+  fb: https://www.facebook.com/profile.php?id=100023154222904
   twitter: 
   linkedin:
 
