Change info about Vitaliy

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -21,7 +21,7 @@
 
 - name: Білий Віталій
   image: /img/team/vitaliy_biliy.jpg
-  title: Лаборант (ср, сб). 3D друк, аналогова електроніка, AVR, STM32
+  title: Лаборант (ср, сб). 3D друк, силова електроніка, AVR, STM32
   fb: https://www.facebook.com/profile.php?id=100023154222904
   twitter: 
   linkedin:
