--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -19,7 +19,7 @@
   twitter: 
   linkedin:
 
-- name: Ткачук Юра
+- name: Ткачук Юрій
   image: /img/team/yurii_tkachuk.jpg
   title: Лаборант (вт, пт). 3D друк, Arduino
   fb: https://www.facebook.com/ua.tkachuk
