Changed team info

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -6,7 +6,7 @@
   linkedin: 
 
 - name: Романенко Антон
-  image: /img/team/anton_romanenko.JPG
+  image: /img/team/anton_romanenko.jpg
   title: Лаборант (пн, вт). AVR, виготовлення PCB, 3D друк, основи FPGA
   fb: https://www.facebook.com/profile.php?id=100041039962261
   twitter: 
