Changed lab staff info

--- a/_data/employees.yml
+++ b/_data/employees.yml
@@ -1,6 +1,6 @@
 - name: Короткий Євген
   image: /img/team/ievgen_korotkyi.jpg
-  title: Засновник
+  title: Засновник. SDR, DSP, FPGA, Verification, RF
   fb: https://www.facebook.com/korotkiy.eugene
   twitter:
   linkedin: 
